<resources>
    <string name="search_hint">Find your travels</string>
    <string name="app_label">Trips</string>
    <string name="app_name">My Trips</string>
    <string name="app_slogan_begin">Create your</string>
    <string name="app_slogan_end"> beautiful memories</string>
    <string name="error_sign_in_email">This email address is not available. Please choose a different address</string>
    <string name="error_sign_in_password">Wrong password. Please try again.</string>
    <string name="label_activity_forgot_password">Forgot your password? We will send you a code to your email. Please confirm your email below.</string>
    <string name="welcome_introduce_begin">Write about your own experience</string>
    <string name="welcome_introduce_end">Record your adventures with beautiful photos, time lines ans more.</string>
    <string name="main_travel_introduce_line1">Ready for your new story</string>
    <string name="main_travel_introduce_line2">Tab the + button to start.</string>
    <string name="warn_empty_travel_title">Travel title is empty</string>
    <string name="warn_empty_travel_place">City is empty</string>
    <string name="title_activity_maps">Maps</string>
    <string name="warn_empty_end_date">End date is empty</string>
    <string name="sort_options_title">Sort Options</string>
    <string name="title_toolbar_edit_travel">Edit Travel</string>
    <string name="title_toolbar_add_travel">New Travel</string>
    <string name="button_txt_add">Add</string>
    <string name="button_txt_edit">Change</string>
    <string name="title_dialog_delete_item">Are you sure want to delete this entry?</string>
    <string name="tab_plan">PLANs</string>
    <string name="tab_diary">diary</string>
    <string name="tab_expense">expense</string>
    <string name="place_item_plan">Select place</string>
    <string name="warn_empty_plan_title">Plan title is empty</string>
    <string name="warn_empty_plan_place">Please choose a place.</string>
    <string name="title_toolbar_add_plan">New Plan</string>
    <string name="title_toolbar_edit_plan">Edit Plan</string>
    <string name="title_toolbar_add_diary">New Diary</string>
    <string name="title_toolbar_edit_diary">Edit Diary</string>
    <string name="title_toolbar_add_expense">New Expense</string>
    <string name="title_toolbar_edit_expense">Edit Expense</string>
    <string name="warn_empty_exp_title">Expense title is empty</string>
    <string name="warn_empty_exp_place">Please choose a place.</string>
    <string name="no_google_map">There are no Google Maps APPs.</string>
    <string name="permission_dialog_title">Please grant those permissions</string>
    <string name="permission_camera_gallery">Write External Storage permissions are required to do the task.</string>
    <string name="permission_camera_msg">Camera and Write External Storage permissions are required to do the task.</string>
    <string name="permission_not_granted">The required permissions are not approved.</string>
</resources>
