<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbToolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:title="@string/app_name"
        app:titleTextColor="@android:color/white" />
    <ImageView
        android:id="@+id/ivSearch"
        android:layout_width="wrap_content"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@drawable/bg_blue_view_onclick"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:src="@drawable/ic_search"
        app:layout_constraintEnd_toStartOf="@id/ivMoreSort"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivMoreSort"
        android:layout_width="wrap_content"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@drawable/bg_blue_view_onclick"
        android:paddingLeft="8dp"
        android:paddingRight="16dp"
        android:src="@drawable/ic_sort"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/rlMainTravelIntroduce"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@mipmap/main_travel_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tbToolbar">

        <TextView
            android:id="@+id/tvHello"
            style="@style/Base.TextAppearance.MaterialComponents.Headline6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:text="Hello,"
            android:textColor="@color/colorSecondaryDark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvIntroduceLine1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvHello"
            android:gravity="center"
            android:text="@string/main_travel_introduce_line1"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvIntroduceLine1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginRight="3dp"
                android:background="@drawable/image_view_button_add"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:src="@drawable/ic_add" />

            <TextView
                android:id="@+id/tvIntroduceLine2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/main_travel_introduce_line2"
                android:textSize="16sp" />
        </LinearLayout>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/margin_vertical_list"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbToolbar" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_add"
        app:backgroundTint="@color/colorSecondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@android:color/white" />
    <!--app:layout_behavior="com.vtcac.thuhuong.mytrips.utils.ScrollAwareFABBehavior"-->
</androidx.constraintlayout.widget.ConstraintLayout>