<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".traveldetail.TravelDetailActivity">

    <RelativeLayout
        android:id="@+id/rlHeader"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_app_bar">

        <ImageView
            android:id="@+id/ivTravelImg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@mipmap/default_img1" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_transparent_black" />

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/tvTravelCity"
            android:background="@drawable/bg_imgview_onclick"
            android:padding="@dimen/margin_normal_16"
            android:src="@drawable/ic_arrow_back"
            android:tint="@android:color/white" />

        <TextView
            android:id="@+id/tvTravelCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:paddingLeft="72dp"
            android:paddingTop="@dimen/margin_normal_16"
            android:paddingRight="@dimen/margin_normal_16"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:textColor="@android:color/white"
            tools:text="city name" />

        <ImageView
            android:id="@+id/ivChangeCover"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_alignTop="@id/tvTravelCity"
            android:layout_alignBottom="@+id/tvTravelCity"
            android:layout_alignParentRight="true"
            android:background="@drawable/bg_imgview_onclick"
            android:paddingHorizontal="@dimen/margin_normal_16"
            android:src="@drawable/ic_more_vert"
            android:tint="@android:color/white" />

        <TextView
            android:id="@+id/tvTravelDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTravelCity"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:paddingLeft="32dp"
            android:paddingTop="28dp"
            android:paddingRight="@dimen/margin_normal_16"
            android:paddingBottom="28dp"
            android:singleLine="true"
            android:text="Jan 1, 2019 - Jan 2, 2019"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:textColor="@android:color/white" />
    </RelativeLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rlHeader">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tiPlan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tab_plan" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tiDiary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tab_diary" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tiExpense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tab_expense" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabs">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/vp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_add"
        app:backgroundTint="@color/colorSecondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@android:color/white" />
</androidx.constraintlayout.widget.ConstraintLayout>